# libdjinni_jni

./: CMakeLists.txt  README.md
